@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version = 0.8
+Application.version = 0.81
 Application.title = FreeRapid Downloader ${Application.version} par Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
