@@ -2,7 +2,7 @@ message.connecting=Probíhá připojování k domovskému serveru...
 message.sending=Probíhá odesílání hlášení o chybě, čekejte prosím...
 message.disconnect=Probíhá odpojování...
 
-message.connect.sameVersion=Není k dipozici žádná nová verze programu.
+message.connect.sameVersion=Není k dispozici žádná nová verze programu.
 message.connect.newVersion=Skvělá zpráva!\nJe k dispozici nová verze programu.\nPřejete si nyní navštívit domovskou stránku pomocí internetového prohlížeče?
 
 
