@@ -72,7 +72,7 @@ checkProcessFromTop.text=Zpracováva&t soubory od shora
 
 panelApplicationSettings.border=Aplikace
 panelConnections1.border=Připojení
-panelProxySettings.border=Proxy servery
+panelProxySettings.border=Seznamy serverů proxy
 panelErrorHandling.border=Zpracování chyb
 panelDownloadsSettings.border=Stahování
 panelAppearance.border=Vzhled
